# web-panel

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTORS.md  LICENSE  README.md  TODO.md  app.py  config.json  main.py  pyproject.toml  update_llama.sh  web-panel.service
examples/: config.json  llama.cpp.service  marinara-engine.service  web-panel.service
scripts/: update_llama.sh
src/web_panel/: app.py  config.py  main.py  utils.py
src/web_panel/utils/: ipaddress.py
tests/utils/: test_ipaddress.py
